--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
   "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
-  "title": "jayant portfolio",
-  "name": "Jayant Rawat",
-  "ascii": "Jayant Rawat",
+  "title": "Aryan Portfolio",
+  "name": "Aryan Sharma",
+  "ascii": "Aryan Sharma",
   "social": {
-    "github": "NOTJAYANTRAWAT",
-    "linkedin": "Jayant-Rawat"
+    "github": "codex-06",
+    "linkedin": "aryan-sharma"
   },
-  "email": "jayantrawat02@gmail.com",
+  "email": "aryan.sharma2020@vitbhopal.ac.in",
   "ps1_hostname": "portfolio",
   "ps1_username": "welcome",
-  "repo": "https://github.com/NOTJAYANTRAWAT",
-  "resume_url": "https://github.com/NOTJAYANTRAWAT/resume/blob/main/JAYANT%20RAWAT%20CV-1.pdf",
+  "repo": "https://github.com/codex-06",
+  "resume_url": "https://drive.google.com/file/d/1qXoZzAtm2ox8T98RhsDCBkqboIjg4b3F/view?usp=sharing",
   "donate_urls": {
-    "paypal": "https://paypal.me/rootjay"
+    "paypal": "https://paypal.me/rootaryan"
   },
   "colors": {
     "light": {
